deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seonology-journey
  labels:
    name: seonology-journey
    app.kubernetes.io/part-of: seonology-journey
